pyweek/challenge/media/challenge.css
/* ... */
#footer {
	clear: both;
	width: 750px;
	height: 100px;
	margin: 0px auto 30px auto;

    /*
    float: left;
    width: 750px;
    margin: 0px;
    */
    text-align: center;
    padding-top: 1em;
    font-size: 80%;
}

#motd {
    clear: both;
    border: thin solid #B399FF;
    background: #E1F1FC;
    padding: 20px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
}

#motd p:first-child {
    margin-top: 0px;
}
#motd p:last-child {
    margin-bottom: 0px;
}

form.form {
    padding: 5px;
}

form label {
    font-weight: bold;
}

.form-label {
    text-align: right;
    vertical-align: top;
    width: 12em;
    padding-right: 2px;
}

#ratings_nonworking ul {
    margin-top: 0px;
    padding-left: 2px;
}

#ratings_nonworking li {
    display: block;
    list-style: none;
    float: left;
}

span.prize {
    display: block-inline;
    padding-left: 24px;
    padding-right: 4px;
    font-family: fixed;
    background-repeat: no-repeat;
    background-position: left top;
    line-height: 18px;
}
span.gold {
    background-image: url('gold.png');
}
span.silver {
    background-image: url('silver.png');
}
span.bronze {
    background-image: url('bronze.png');
}

ul.errorlist {
    background: rgb(255,214,214);
    margin: 0px;
    list-style-type: none;
    padding: 2px;
}
ul.errorlist li {
    margin: 0px;
}

p.form-error {
    margin-top: 1px;
    color: red;
}
p.form-help {
    margin-top: 1px;
    font-size: 75%;
}

ul.messages {
    border: thin solid green;
    background: lightgreen;
    margin: 1em;
    padding: 5px;
    list-style-type: none;
}

div.diary {
    background: white;
}

div.diary h2 {
    font-size: 1em;
    border-top: thin solid gray;
    background: #EEE;
    margin-top: 1px;
    margin-bottom: 1px;
}

div.diary h3 {
    font-size: 1em;
    margin-top: 1px;
    border-bottom: thin solid gray;
}

div.diary-comment {
    margin-bottom: 1em;
    border: thin solid #ddd;
    padding: 5px;
}

textarea#id_content,textarea#id_comment {
    width: 100%;
    height: 15em;
}

table.form {
    width: 100%;
}

div.odd {
    background: #e0e0e0;
}
p.diary-byline {
    margin-top: 0px;
    font-weight: bold;
    border-bottom: thin dashed #ddd;
}
table#files {
    border: thin solid gray;
    border-collapse: separate;
    border-spacing: 0px 0px;
}
table#files th {
    text-align: left;
    font-weight: bold;
    background: #e0e0e0;
    border-bottom: thin solid gray;
}
table#files td {
    padding-right: 1em;
}
table#files tr.odd td {
    background: #e0e0e0;
}
.winner {
    font-weight: bold;
}

table#diary-board {
    clear: none !important;
    border: thin solid gray;
    border-collapse: separate;
    border-spacing: 0px 0px;
    width: 100%;
}
table#diary-board th {
    text-align: left;
    font-weight: bold;
    background: #e0e0e0;
    border-bottom: thin solid gray;
    border-left: thin solid gray;
    padding-left: 2px;
    padding-right: 2px;
}
table#diary-board th:first-child {
    border-left: none;
}
table#diary-board td {
    border-left: thin solid gray;
    padding: 2px;
}
table#diary-board td:first-child {
    border-left: none;
}
table#diary-board tr.odd td {
    background: #e0e0e0;
}

table#top-entries {
    width: 100%;
    margin-bottom: 1.5em;
}
table#top-entries td {
	vertical-align: top;
	padding-bottom: 0.5em;
}
table#top-entries th {
	text-align: left;
	font-weight: bold;
	padding-bottom: 0.5em;
}

#pagination {
       background-color: #F3F3F3;
       margin-top:1em;
       padding:0.4em;
       text-align:right;
       font-size: 90%;
}

#pagination span {
       background-color: #0162BE;
       color: white;
       margin: .1em;
       padding-left: 2px;
       padding-right: 2px;
}

a.button {
       text-decoration: none;
       color: #0162BE;
       border: thin solid #0162BE;
       margin: .1em;
       padding-left: 2px;
       padding-right: 2px;
}
a.button:visited {
       color: #0162BE;
}

a.button:hover {
       background-color: white;
       color: blue;
       text-decoration: none;
}


table#timetable {
    border-collapse: separate;
    border-spacing: 0px 0px;
}
table#timetable th {
    text-align: left;
    font-weight: bold;
    background: #e0e0e0;
}
table#timetable td {
    padding-right: 1em;
    padding-left: 1em;
    padding-bottom: 2px;
    padding-top: 2px;
    border-left: thin solid gray;
    border-top: thin solid gray;
}
table#timetable td:first-child {
    border-left: none;
}
table#timetable tr.active td {
    font-weight: bold;
}
table#timetable tr.done td {
    text-decoration: line-through;
}

div#thumb  {
    border: thin solid gray;
    float: right;
    margin-left: 1em;
    margin-bottom: 1em;
}
div#thumb p {
    padding-left: 2px;
    padding-right: 2px;
    margin: 0px;
    background: white;
    text-align: center;
}

b.delete, a.delete[href] {
    white-space: pre;
    color: red;
    cursor: pointer;
    padding-left:12px;
    background:url(http://media.pyweek.org/static/admin/img/icon_deletelink.gif) 0 .25em no-repeat;
    text-decoration:none;
}

a.add[href] {
    white-space: pre;
    color: green;
    cursor: pointer;
    padding-left:12px;
    background:url(http://media.pyweek.org/static/admin/img/icon_addlink.gif) 0 .25em no-repeat;
    text-decoration:none;
}

a.edit[href] {
    white-space: pre;
    color: blue;
    cursor: pointer;
    padding-left:12px;
    background:url(http://media.pyweek.org/static/admin/img/icon_changelink.gif) 0 .25em no-repeat;
    text-decoration:none;
}

dl#entry-list dt {
    font-weight: bold;
}
dl#entry-list dd {
    margin-bottom: 1em;
}

.entry-description {
   display: block;
   width: 570px;
   overflow: auto;
}

#ratings_nonworking ul {
  list-style-type: none;
}

.small {
    font-size: 75%;
}

.award {
    float: left;
    text-align: center;
    margin: 4px;
    width: 128px;
    /* height: 128px; */
    overflow: hidden;
}

.award em {
    font-size: 80%;
}


#cssdropdown {
    font-size: 90%;
}
/* ... */

